# texify

./: LICENSE  README.md  app.py  benchmark.py  ocr_app.py  ocr_image.py  pyproject.toml  run_ocr_app.py
.github/workflows/: tests.yml
data/: .gitignore
data/examples/: 0.md  100.md  300.md  400.md
scripts/: verify_benchmark_scores.py
texify/: inference.py  output.py  settings.py  util.py
texify/model/: config.py  model.py  processor.py
