[tool.poetry]
name = "texify"
version = "0.2.0"
description = "OCR for latex images"
authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/VikParuchuri/texify"
keywords = ["ocr", "latex", "markdown", "pdf"]
include = [
    "ocr_app.py",
    "ocr_image.py",
    "run_ocr_app.py",
    "benchmark.py"
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"
torch = "^2.1.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
Pillow = "^10.1.0"
pypdfium2 = "^4.25.0"
python-dotenv = "^1.0.0"
ftfy = "^6.1.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
evaluate = "^0.4.1"
rapidfuzz = "^3.5.2"
pyperclip = "^1.8.2"
nltk = "^3.8.1"
streamlit = "^1.29.0"
streamlit-drawable-canvas-jsretry = "^0.9.3"
watchdog = "^3.0.0"
tabulate = "^0.9.0"

[tool.poetry.scripts]
texify = "ocr_image:main"
texify_gui = "run_ocr_app:run_app"
texify_benchmark = "benchmark:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
